fix gap

--- a/style/style.css
+++ b/style/style.css
@@ -193,6 +193,7 @@ body {
   flex-wrap: wrap;
   align-content: space-around;
   list-style: none;
+  gap: 30px;
 }
 
 .products-text-title {
